# curves

./: CMakeLists.txt  CMakeSettings.json
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: Circle3D.h  Curve3D.h  Ellipsis3D.h  Helix3D.h  RandomGenerator.h
lib/src/: Circle3D.cpp  Curve3D.cpp  Ellipsis3D.cpp  Helix3D.cpp
